client/main.css
.navbar {
  border: 0;
  margin-bottom: 0;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
}

html, body {
  height: 100%;
  overflow: hidden;
}

p {
  margin: 0;
}

.app {
  height: 100%;
  padding: 0;
}

.content {
  margin: 0;
  height: 100%;
}

.sidebar {
  max-height: none;
  height: calc(100% - 50px);
  padding: 0;
  background-color: rgb(254, 254, 254);
}

.sidebar-search-container {
  width: 100%;
  height: 50px;
  padding-top: 7px;
  padding-left: 12px;
  padding-right: 12px;
  background-color: #f0f0f0;
  border-bottom: 1px #222;
}

.sidebar-search {
  border: 0;
  font-size: 15px;
  outline: 0 none;
}

.sidebar-search:focus {
  border: 0;
  -webkit-box-shadow: 0;
  -moz-box-shadow: 0;
  box-shadow: 0;
  outline: 0 none;
}

.sidebar-search-container .glyphicon {
  font-size: 15px;
  color: #888;
}

.inner-addon {
  position: relative;
}

.inner-addon .glyphicon {
  position: absolute;
  padding: 10px;
  pointer-events: none;
}

.left-addon .glyphicon { left: 0; }
.right-addon .glyphicon { right: 0; }

.left-addon input { padding-left: 40px; }
.right-addon input { padding-right: 40px; }

.sidebar-item-list {
  max-height: none;
  height: calc(100% - 50px);
  padding: 0;
  background-color: rgb(254, 254, 254);
  overflow-y: auto;
}

.sidebar-item {
  padding: 5px;
  margin: 0;
  border-bottom: 1px solid rgb(242, 242, 242);
  color: #4b4b4b;
}

.sidebar-item:hover {
  background-color: #F4F5F5;
}

.sidebar-item-list .active {
  background-color: #e9ebeb;
}

a, a:link, a:hover, a:active, a:visited {
  color: #000;
  text-decoration: none;
}

.main {
  padding: 10px;
  max-height: none;
  height: calc(100% - 50px);
  overflow-y: auto;
  background-color: #f5f5f5;
}

::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}

::-webkit-scrollbar-thumb {
  background-color: rgba(0, 0, 0, 0.2);
}

::-webkit-scrollbar-track {
  background: rgba(255, 255, 255, 0.0784314);
}

.movement-icon {
  font-size: 32px;
}

.job-header {
  padding-bottom: 15px;
}

.job-header .job-number {
  position: absolute;
}

.job-movement {
  padding-bottom: 15px;
}

.cargo-container {
  border-radius: 5px;
  background-color: #eee;
  padding-top: 3px;
  padding-bottom: 3px;
  margin-bottom: 5px;
}

.cargo-container .container-header {
  padding-top: 3px;
  padding-bottom: 3px;
  margin-left: 0px;
  margin-right: 0px;
}

.cargo-package {
  border-radius: 5px;
  background-color: #ddd;
  margin-left: 10px;
  margin-right: 10px;
}

.cargo-package .row {
  padding-top: 3px;
  padding-bottom: 3px;
  margin-bottom: 6px;
  margin-left: -10px;
  margin-right: -10px;
}

.sidebar-item .job-number {
  font-weight: bold;
  font-size: 18px;
}

